# safetensors

bindings/python/: Cargo.toml  load.py  test.py
bindings/python/py_src/safetensors/: numpy.py
bindings/python/src/: lib.rs
bindings/python/tests/: test_paddle_comparison.py
