[package]
name = "safetensors-python"
version = "0.4.3-dev.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "safetensors_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20.3", features = ["extension-module"] }
memmap2 = "0.5"
serde_json = "1.0"
log = "0.4"
env_logger = "0.9"

[dependencies.safetensors]
version = "0.4.3-dev.0"
path = "../../safetensors"
